# SelfDicWithJetPack

./: .gitignore  build.gradle  settings.gradle
app/: build.gradle
app/schemas/com.example.selfdicwithjetpack.data.AppDb/: 1.json
app/src/androidTest/java/com/example/selfdicwithjetpack/: ExampleInstrumentedTest.kt  MyTestSuite.kt  SleepWorkerTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  JniClass.cpp  JniClass.h  jni-function.c  jni-function.cpp  jni-function.h
app/src/main/java/com/example/selfdicwithjetpack/: DicApp.kt  EditAct.java  FirstFragment.kt  MainActivity.kt  RandomCardAct.java  SecondFragment.kt
app/src/main/java/com/example/selfdicwithjetpack/api/: NetworkCenter.kt
app/src/main/java/com/example/selfdicwithjetpack/crypto/: BaseNumberTransUtil.kt  CryptoUtil.kt
app/src/main/java/com/example/selfdicwithjetpack/data/: AppDb.kt  DicRepository.kt  README.md
app/src/main/java/com/example/selfdicwithjetpack/db/: Db.kt  DbAction.kt  DbManager.kt  Entity.kt  SelfDicDatabase.kt  UserDAO.kt
app/src/main/java/com/example/selfdicwithjetpack/detail/: DetailAct.kt  DetailFragment.kt
app/src/main/java/com/example/selfdicwithjetpack/dic/: DicCreateFrag.kt  DicCreateViewModel.kt
app/src/main/java/com/example/selfdicwithjetpack/display/: DicListFrag.kt  DisplayAdapter.kt  DisplayBean.kt  DisplayData.kt  DisplayFrag.kt  DisplayStateAdapter.kt  DisplayUIModel.kt  DisplayViewModel.kt
app/src/main/java/com/example/selfdicwithjetpack/general/: PrivacyDialog.kt
app/src/main/java/com/example/selfdicwithjetpack/log/: LogUtil.kt
app/src/main/java/com/example/selfdicwithjetpack/login/: LoginConstant.java  LoginConstants.kt  LoginFrag.kt  LoginHandler.kt  LoginViewModel.kt
app/src/main/java/com/example/selfdicwithjetpack/main/: HistoryAdapter.java  MainActivity.kt  MainDisplayBean.kt  MainViewModel.kt
app/src/main/java/com/example/selfdicwithjetpack/ndk/: NdkMediator.kt
app/src/main/java/com/example/selfdicwithjetpack/network/: NetworkManager.kt
app/src/main/res/anim/: trans_x__300_0_duration_1000.xml
app/src/main/res/layout/: activity_main_1.xml  detail_act.xml  detail_frag.xml  dic_create_frag.xml  dic_list_frag.xml  display_frag.xml  display_rv_header.xml  display_rv_item.xml  display_rv_load_state_item.xml  edit_act.xml  fragment_second.xml  item_history.xml  login_frag.xml  main_act.xml  random_card_act.xml  random_frag.xml  random_item.xml  random_widget.xml  random_widget_config_act.xml  setting_frag.xml
app/src/main/res/menu/: display_menu.xml  main_menu.xml  menu_main.xml
app/src/main/res/navigation/: nav_graph.xml  nav_login.xml
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: login_scene.xml  rand_widget_provider_info.xml  random_scene.xml  shortcuts.xml
app/src/test/java/com/example/selfdicwithjetpack/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
(+60 files in other folders)
